implement update and delete yaml template, and update service
